--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>GitHub - Git</h1>
     <p>Acesta este primul nostru repository pe GitHub, creat cu ajutorul comenzilor de git din terminal</p>
+    <p>Care a avut mai multe commit-uri pe parcurs</p>
 </body>
 </html>
