--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>GitHub - Git</h1>
     <p>Acesta este primul nostru repository pe GitHub, creat cu ajutorul comenzilor de git din terminal</p>
     <p>Care a avut mai multe commit-uri pe parcurs</p>
+
+    <p>Acesta este un paragraf adaugat pe branch-ul cu denumirea 'third-branch'</p>
 </body>
 </html>
