--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>GitHub - Git</h1>
     <p>Acesta este primul nostru repository pe GitHub, creat cu ajutorul comenzilor de git din terminal</p>
     <p>Care a avut mai multe commit-uri pe parcurs</p>
+
+    <p>Acest text este adaugat doar pe branch-ul forth-branch</p>
 </body>
 </html>
