--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Acesta este primul nostru repository pe GitHub, creat cu ajutorul comenzilor de git din terminal</p>
     <p>Care a avut mai multe commit-uri pe parcurs</p>
 
+    <h2>Subtitlu secundar</h2>
     <p>Acest paragraf a fost adaugat folosind un nou branch cu denumirea 'secondary-branch'</p>
 </body>
 </html>
